# point_cloud_outlier_removal

./: .gitignore  evaulate.py  pyproject.toml
data/: README.md
src/dataLoader/: point_cloud_loader.py
src/helpers/: file_helpers.py
src/optimizer/: point_cloud_optimizer.py
src/processor/: base_processor.py
src/processor/noiseFilter/: radius_outlier_removal.py  statistical_outlier_removal.py
